.platform-services/platform-ui/platform-ui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: platform-ui-ingress
  namespace: platform-ui
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    alb.ingress.kubernetes.io/load-balancer-name: base-platform-dashboard
    alb.ingress.kubernetes.io/inbound-cidrs: 72.79.77.223/32
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    alb.ingress.kubernetes.io/success-codes: "200,307"
spec:
  rules:
  - host: platform.base-app-layer.dev
    http:
      paths:
      - path: /vault
        pathType: Prefix
        backend:
          service:
            name: vault-proxy
            port:
              number: 8200
      - path: /argocd
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 80
      - path: /airflow
        pathType: Prefix
        backend:
          service:
            name: airflow-proxy
            port:
              number: 8080
      - path: /
        pathType: Prefix
        backend:
          service:
            name: platform-ui-service
            port:
              number: 80
  - http:
      paths:
      - path: /vault
        pathType: Prefix
        backend:
          service:
            name: vault-proxy
            port:
              number: 8200
      - path: /argocd
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 80
      - path: /airflow
        pathType: Prefix
        backend:
          service:
            name: airflow-proxy
            port:
              number: 8080
      - path: /
        pathType: Prefix
        backend:
          service:
            name: platform-ui-service
            port:
              number: 80
